Changelog
=========

1.0dev (unreleased)
-------------------

- Added exclude value field